# gitlabnss

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: publish.yaml
include/: config.hpp  error.hpp  gitlabapi.hpp  rpcclient.hpp
res/: gitlabnss.conf  gitlabnssd
src/: CMakeLists.txt  authorized_keys.cpp  config.cpp  gitlabapi.cpp  gitlabnssd.cpp  nss_interface.cpp
src/protocol/: messages.capnp
